lang.java.statics.test/tests/positive/jre/qualified-reference-to-explicit-java-lang-Object.yes.javtest
STATIX ok 
JAVAC  ok 

[java] {
  [lang] {
    [Object]
    package java.lang;
    public class Object {}
  }
}

[Test]
public class Test extends java.lang.Object {}