lang.java.statics.test/tests/negative/classes/innerclasssamename.no.javtest
STATIX fail java\.duplicates\.no-enclosing-type-same-name
JAVAC  fail class C is already defined in package unnamed package

[C]
public class C {
    public class C {}
}

